--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,21 @@
 {
     "behave-vsc.featuresPath": "${workspaceFolder}/trustpoint/features",
 
-    // Tell ruff-vscode to prefer your environment over its bundle
     "ruff.importStrategy": "fromEnvironment",
 
     "mypy-type-checker.importStrategy": "fromEnvironment",
     
     "ruff.interpreter": [
-        "${workspaceFolder}/.venv/bin/python"  // on Unix/macOS
+        "${workspaceFolder}/.venv/bin/python"
     ],
 
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "[windows]": {
+        "ruff.interpreter": [
+            "${workspaceFolder}/.venv/Scripts/python.exe"
+        ],
+        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe"
+    },
+
     "python.terminal.activateEnvironment": true
 }
