--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,12 +1,12 @@
 {
   "recommendations": [
     "charliermarsh.ruff",
-    "magicstack.magicpython",
     "ms-python.debugpy",
     "ms-python.mypy-type-checker",
     "ms-python.python",
     "ms-python.vscode-pylance",
     "njpwerner.autodocstring",
-    "tamasfe.even-better-toml"
+    "tamasfe.even-better-toml",
+    "cucumberopen.cucumber-official"
   ]
 }
