--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,9 @@
 {
-    "behave-vsc.featuresPath": "${workspaceFolder}/trustpoint/features",
+    // Add user-specific settings here
 
-    "ruff.importStrategy": "fromEnvironment",
+    "behave-vsc.featuresPath": "trustpoint/features",
 
-    "mypy-type-checker.importStrategy": "fromEnvironment",
-    
-    "ruff.interpreter": [
-        "${workspaceFolder}/.venv/bin/python"
-    ],
-
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-    "[windows]": {
-        "ruff.interpreter": [
-            "${workspaceFolder}/.venv/Scripts/python.exe"
-        ],
-        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe"
-    },
-
-    "python.terminal.activateEnvironment": true
+    // Interpreter configuration for Windows
+    //"python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
+    //"ruff.interpreter": ["${workspaceFolder}/.venv/Scripts/python.exe"]
 }
